# PyAnonFile

./: README.md  pyanonfile.py  setup.cfg
src/: pyanonfile.py
src/PyAnonFile.egg-info/: PKG-INFO  SOURCES.txt
