[metadata]
name = PyAnonFile
version = 2022.0.1
author = no7mac
author_email = buisnesstrictly@gmail.com
description = Upload files to AnonFile and the other viariants
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/no7macs/PyAnonFile
project_urls =
    Bug Tracker = https://github.com/no7macs/PyAnonFile/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.10

[options.packages.find]
where = src
